GNOME Bugzilla – Bug 794533
v4l2: Fix unknown type name ‘off_t’ error
Last modified: 2018-03-27 17:59:51 UTC
Fix following build error gstv4l2object.h:197:17: error: unknown type name ‘off_t’ gint fd, off_t offset); ^
Created attachment 369916 [details] [review] v4l2: Fix unknown type name ‘off_t’ error Fix build error on WSL environment
Review of attachment 369916 [details] [review]: ::: sys/v4l2/gstv4l2object.h @@ +30,3 @@ #endif +#ifdef HAVE_UNISTD_H Seems fair change, though isn't unistd strictly required deps, which would mean we don't need this ifdef.
Created attachment 369937 [details] [review] v4l2: Fix unknown type name ‘off_t’ error I update patch to include unistd without ifdef.
Review of attachment 369937 [details] [review]: Thanks, that will be merged soon.
Attachment 369937 [details] pushed as c4d1368 - v4l2: Fix unknown type name ‘off_t’ error
Commited to 1.14 as 6ab0442f90520c6cc1c076b0a0d22af534b274ec